--- a/sample/R1.html
+++ b/sample/R1.html
@@ -35,7 +35,7 @@ var line = d3.line()
     .x(function(d) { return x(d.date); })
     .y(function(d) { return y(d.close); });
 
-d3.tsv("http://swarm.cs.pub.ro/~vilie/chart/ROBOR1.tsv", function(d) {
+d3.tsv("http://swarm.cs.pub.ro/~vilie/chart/ROBOR1M.tsv", function(d) {
   d.date = parseTime(d.date);
   d.close = +d.close;
   return d;
