--- a/sample/R3.html
+++ b/sample/R3.html
@@ -35,7 +35,7 @@ var line = d3.line()
     .x(function(d) { return x(d.date); })
     .y(function(d) { return y(d.close); });
 
-d3.tsv("http://swarm.cs.pub.ro/~vilie/chart/ROBOR3.tsv", function(d) {
+d3.tsv("http://swarm.cs.pub.ro/~vilie/chart/ROBOR3M.tsv", function(d) {
   d.date = parseTime(d.date);
   d.close = +d.close;
   return d;
